[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mirt"
dynamic = ["version"]
description = "Multidimensional Item Response Theory for Python"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "mirt contributors"}
]
keywords = [
    "item response theory",
    "IRT",
    "psychometrics",
    "educational measurement",
    "latent trait models",
    "Rasch",
    "graded response model",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
]

[project.optional-dependencies]
pandas = ["pandas>=1.3"]
polars = ["polars>=0.20"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "polars>=0.20",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.0",
    "numpydoc>=1.5",
]

[project.urls]
Homepage = "https://github.com/mirt/mirt"
Documentation = "https://mirt.readthedocs.io"
Repository = "https://github.com/mirt/mirt"

[tool.setuptools.dynamic]
version = {attr = "mirt._version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
strict = true
